--- a/packages/rich-text-react-renderer/package.json
+++ b/packages/rich-text-react-renderer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@contentful/rich-text-react-renderer",
+  "name": "@ignw/rich-text-react-renderer",
   "version": "14.1.0",
   "main": "dist/rich-text-react-renderer.es5.js",
   "typings": "dist/types/index.d.ts",
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/contentful/rich-text.git"
+    "url": "https://github.com/ignw/rich-text.git"
   },
   "license": "MIT",
   "engines": {
