--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,13 @@
   "lerna": "2.7.2",
   "version": "14.1.1",
   "packages": [
-    "packages/rich-text-react-renderer"
+    "packages/contentful-slatejs-adapter",
+    "packages/rich-text-from-markdown",
+    "packages/rich-text-html-renderer",
+    "packages/rich-text-links",
+    "packages/rich-text-plain-text-renderer",
+    "packages/rich-text-react-renderer",
+    "packages/rich-text-types"
   ],
   "command": {
     "bootstrap": {
