--- a/packages/rich-text-react-renderer/package.json
+++ b/packages/rich-text-react-renderer/package.json
@@ -46,5 +46,6 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
-  }
+  },
+  "gitHead": "15f8f92148013add726c36410c1fda5aab64119b"
 }
